# home_assignment

./: .gitignore  README.md  db_init.sql  fx_rates.py  pyproject.toml
