[project]
name = "fx-rates"
version = "0.1.0"
description = "fetch FX rates for current date"
authors = [
    {name = "Kateryna Ostrovska",email = "ostrovskakatia@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.8"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
